# simpshell

./: CMakeLists.txt  main.c
include/: builtins.h  executor.h  jobs.h  parser.h  prompt.h  shell.h  terminal.h
src/: builtins.c  executor.c  jobs.c  main.c  parser.c  prompt.c  terminal.c
